spacing padding fixs

--- a/htdocs/sites/all/themes/mc_base/css/all.less
+++ b/htdocs/sites/all/themes/mc_base/css/all.less
@@ -3245,6 +3245,7 @@ body.page-user .view-my-groups ul {
 #block-views-mc_events_sections-block_4{ //block_4 for og events page
   .block-content{
     padding: 0px !important; //overide the default #page .block-content padding
+    padding-top: 10px !important;
     .event{
       padding: 10px 10px 0 10px !important; //add back the padding to the event section
       margin-bottom: 0px !important;
